[package]
name = "file-spawner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
clap-verbosity-flag = "1.0"
env_logger = "0.9"
log = "0.4"